# D3-Kit

./: .gitattributes  .markdownlint-cli2.jsonc  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  D3-Kit-Methodology.md  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docs.yml  lint.yml  publish.yml  release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-templates.py  get-next-version.sh  update-version.sh
D3-templates/: README.md
D3-templates/d3-commands/: d3.analyze.md  d3.constitution.md  d3.contracts.md  d3.data.md  d3.implement.md  d3.intend.md  d3.plan.md  d3.quickstart.md  d3.research.md  d3.tasks.md  d3.taskstoissues.md
calcultor/: QWEN.md
calcultor/.d3/D3-templates/: README.md  d3-spec-template.md
calcultor/d3-features/1-a-calculator-in-html/: spec.md
docs/: index.md  mkdocs.yml
memory/: d3-constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  d3-analyze.sh  d3-checklist.sh  d3-clarify.sh  d3-constitution.sh  d3-intend.sh  d3-plan.sh  d3-quickstart.sh  d3-tasks.sh  d3-taskstoissues.sh  d3-utils.sh
scripts/powershell/: common.ps1  d3-analyze.ps1  d3-checklist.ps1  d3-clarify.ps1  d3-contracts.ps1  d3-data.ps1  d3-quickstart.ps1  d3-research.ps1  d3-tasks.ps1  d3-utils.ps1
search/: search_index.json
src/d3_kit/: __init__.py  cli.py
src/d3_kit/D3-templates/: checklist-template.md
tester/.claude/commands/: d3.analyze.md  d3.plan.md
tester/.d3/: config.toml
tester/.d3/D3-templates/: d3-plan-template.md  d3-tasks-template.md  vscode-settings.json
tester/.qwen/commands/: d3.checklist.md  d3.clarify.md  d3.constitution.md  d3.implement.md  d3.intend.md  d3.tasks.md
tester/D3-templates/: README.md
tester/D3-templates/d3-commands/: d3.clarify.md  d3.data.md
tester/scripts/powershell/: example.ps1
tester3/.d3/: config.toml
tester3/.d3/D3-templates/: d3-spec-template.md
tester3/.qwen/commands/: d3.toml
(+35 files in other folders)
