[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3-kit"
version = "1.0.0"
description = "D3-Kit: Developer-Driven Development Framework - Build high-quality software faster with intent-first development"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "D3-Kit Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0"
]

[project.scripts]
d3 = "d3_kit.cli:app"

[project.urls]
Homepage = "https://github.com/Nom-nom-hub/d3-kit"
Repository = "https://github.com/Nom-nom-hub/d3-kit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
d3_kit = ["D3-templates/d3-commands/*", "D3-templates/*", "scripts/bash/*", "scripts/powershell/*"]