[project]
name = "d3-kit"
version = "1.0.3"
description = "D3-Kit: Developer-Driven Development Framework - Build high-quality software faster with intent-first development"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "D3-Kit Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
    "typer>=0.9.0",
    "rich",
    "httpx>=0.24.0",
]

[project.scripts]
d3 = "d3_kit.cli:app"

[project.urls]
Homepage = "https://github.com/Nom-nom-hub/d3-kit"
Repository = "https://github.com/Nom-nom-hub/d3-kit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d3_kit"]

[tool.mypy]
ignore_missing_imports = true